--- a/table.html
+++ b/table.html
@@ -37,6 +37,7 @@
     </head>
     <body>
         <h1 align="center"><u>Student Table</u></h1>
+        
         <table border="2" align="center" cellpadding="10" cellspacing="0">
            <tr>
             <th>Roll No</th>
@@ -52,7 +53,7 @@
                <td>1</td>
                <td>Ganesh</td>
                <td>50</td>
-               <td rowspan="5" >MARKS</td>
+               <td rowspan="5" width="3px" style="vertical-align:middle;" ><p style="transform:rotate(270deg); white-space: nowrap;">MARKS</p></td>
                <td>60</td>
                <td>450</td>
                <td class="grade">C</td>
@@ -102,5 +103,6 @@
         </tr>
 
         </table>
+    
     </body>
 </html>
