--- a/Forms.html
+++ b/Forms.html
@@ -20,6 +20,7 @@
             <label>Mobile Number:</label><input type="number" size="10" placeholder="phone number" required><br><br>
             <label>Qualification:</label>
             <select required>
+                <option value="disabled selected">--select--</option>
                 <option>B.tech</option>
                 <option>M.tech</option>
                 <option>Bsc</option>
