--- a/Lists.html
+++ b/Lists.html
@@ -75,7 +75,7 @@
             <li>mongoDB</li>
         </ul>
         <h3 class="sc">Ordered List:</h3>
-        <ol>
+        <ol type="A">
             <li>html</li>
             <li>css</li>
             <li>javascript</li>
@@ -90,7 +90,7 @@
         </dl>
 
         <h3 class="tc">Un ordered list</h3>
-        <ul>
+        <ul style="list-style-type: disc;">
             <li>html</li>
             <li>css</li>
             <li>javascript</li>
@@ -99,7 +99,7 @@
             <li>mongoDB</li>
         </ul>
         <h3 class="tc">Ordered List:</h3>
-        <ol>
+        <ol type="a">
             <li>html</li>
             <li>css</li>
             <li>javascript</li>
@@ -123,7 +123,7 @@
             <li>mongoDB</li>
         </ul>
         <h3 class="fourth column">Ordered List:</h3>
-        <ol>
+        <ol type="I">
             <li>html</li>
             <li>css</li>
             <li>javascript</li>
