--- a/Loginpage.html
+++ b/Loginpage.html
@@ -11,7 +11,7 @@
         <label>Enter Your Email:</label> <input type="email" name="email" placeholder="email" required><br><br>
         <label>Enter Your Password:</label> <input type="password" id="password" placeholder="password" required><br><br>
         <button>Login</button> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        Dont have an account?&nbsp;   <a href="#"> Register Now</a>
+        Dont have an account?&nbsp;   <a href="Registerpage.html"> Register Now</a>
         <br><br><br><br><br><br>
         </form>
         <hr>
